dev/sensu/ingress-patch.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sensu
  namespace: sensu
  labels:
    app: sensu
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - sensu.dev.sdpaks.equinor.com
        - sensu-api.dev.sdpaks.equinor.com
        - sensu-agent-api.dev.sdpaks.equinor.com
      secretName: sensu-tls
  rules:
    - host: sensu.dev.sdpaks.equinor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sensu-svc
              servicePort: 3000
    - host: sensu-api.dev.sdpaks.equinor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sensu-svc
              servicePort: 8080
    - host: sensu-agent-api.dev.sdpaks.equinor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sensu-svc
              servicePort: 8081
